package io.silky;

public class Cpu {
    public boolean run() {
        return RandomInt.success();
    }
}
