package io.silky;

public class HardDisk {
    public boolean read() {
        return RandomInt.success();
    }
}
