package io.silky;

public class Memory {

    public boolean checkMemory() {
        return RandomInt.success();
    }
}
