package io.silky;

public class OperatingSystem {
    public boolean load() {
        return RandomInt.success();
    }
}
